# neetpay

./: .env.example  .gitignore  PROMPT_REPRODUCTION.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json
backend/: Cargo.toml
backend/emails/: invoice_paid.html  magic_link.html  welcome.html
backend/migrations/: 20260307000001_initial.sql  20260307000002_card_orders.sql  20260307000003_auth.sql  20260307000004_magic_link_crossdevice.sql
backend/src/: errors.rs  main.rs
backend/src/api/: auth.rs  cards.rs  error.rs  invoices.rs  jwt_auth.rs  merchants.rs  middleware.rs  mod.rs
backend/src/clients/: email.rs  mod.rs  monero.rs  trocador.rs  wagyu.rs
backend/src/db/: mod.rs
backend/src/models/: card_order.rs  mod.rs
backend/src/workers/: auth_cleanup.rs  card_poller.rs  expiry_checker.rs  mod.rs  swap_poller.rs  webhook_sender.rs  xmr_watcher.rs
docs/: architecture.md  oxapay-integration.md  oxapay-rapport.md  tracodor.md  xmr-fee-forwarding-plan.md
prisma/: schema.prisma  seed-dev.ts
public/: openapi.json
public/sdk/: neetpay.js
scripts/: encrypt-seed.ts  generate-seed.ts  setup-vps-postgres.sh
src/: instrumentation.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/docs/: page.tsx  (+1 more)
src/components/: providers.tsx
src/hooks/: use-count-up.ts  use-reveal-on-scroll.ts  use-stagger-children.ts  use-text-reveal.ts  use-widget-context.tsx  use-widget-layout.ts  useAuth.ts
src/lib/: auth.ts  constants.ts  db.ts  env-check.ts  oxapay.ts  qr.ts
src/types/: index.ts  wallet.ts
(+180 files in other folders)
